# master-thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/classifier/: classifier_eval.yaml  classifier_eval_covid.yaml  classifier_train.yaml  classifier_train_covid.yaml  classifier_tune.yaml  classifier_tune_covid.yaml  results_tuned_model.yaml
config/data_filtering/: data_filtering.yaml  data_filtering_covid.yaml
config/data_split/: data_split.yaml  data_split_covid.yaml
config/evaluation/: conditioning_eval.yaml  fid_config.yaml  general_utility_evaluating.yaml  general_utility_training.yaml  mmd_config.yaml  ms_ssim_config.yaml  mult_gens_eval.yaml  subpop_eval.yaml  utility.yaml  xai.yaml
config/experiments/: covid_exps.yaml
config/generator/: autoencoder_train.yaml  generator_sample.yaml  generator_sample_batch.yaml  generator_train.yaml
config/pre_trained/: autoencoder_finetune.yaml  generator_finetune.yaml  generatpr_finetune.yaml
experiments/: age_group_experiment.py  covid_attrs_experiment.py  experiments_eda.ipynb  gender_and_age_experiment.py  gender_experiment.py  multi_task_experiment.py
logs/: age_experiment_results_40_60.csv  classifier_eval_gt.txt  covid_GT_eval_logs.txt  covid_train_logs.txt  experiment_logs_60_80.txt  experiment_logs_F_60_80.txt  gender_age_experiment_results_40_60_M.csv  gender_age_experiment_results_60_80_F.csv  tune_logs.csv
logs/classifier/: classifier_eval_test.txt  covid_TEST_eval_logs.txt
logs/experiments/: age_experiment_results_60_80.csv  experiment_logs_40_60.txt  experiment_logs_F_40_60.txt  experiment_logs_M_40_60.txt  experiment_logs_M_60_80.txt  experiment_logs_gender.txt  gender_age_experiment_results_40_60_F.csv  gender_age_experiment_results_60_80_M.csv  gender_experiment_results.csv
models/generator/: embeddings.pth  scale.pt  training_losses.csv  uncond_training_losses.csv
notebooks/: XAI.ipynb  covid_metadata_eda.ipynb  graphs_eda.ipynb  metadata_eda.ipynb
results/: covid_pred_gt.csv
results/covid_experiments/: experiment_age_group.csv  experiment_sex.csv  experiment_sex_age_group.csv
src/checks/: check_dicom_shapes.py  check_nifti_volumes.py
src/classifier/: classifier_eval_2D.py  classifier_evaluate_nifti.py  classifier_train.py  classifier_train_2D.py  classifier_train_nifti.py  classifier_tune_2D.py  classifier_tune_nifti.py
src/data_download/: kaggle_covid_data_download.py
src/data_filtering/: clean_data_folder_MAC.py  data_filter_covid.py  data_filtering.py
src/data_processing/: convert_dicom_to_nifti.py
src/data_split/: data_split_covid.py  data_split_folders.py  data_split_patients.py
src/datasets/: dicom_dataset.py  nifti_dataset.py
src/generator/: aekl_pretrained_finetune.py  autoencoder_training.py  cfg_dm_training.py  cfg_latent_diffusion_training.py  dm_training.py  emb_cfg_ldm_training.py  gen_pretrained_finetune.py  gen_pretrained_medvae.py  generator_sample_batches.py  ldm_training.py  (+1 more)
(+24 files in other folders)
