[project]
name = "master-thesis"
version = "0.1.0"
description = "Master thesis: Evaluating Medical AI Models Using Synthetic Data"
authors = [{name = "mireiafrt",email = "mireiafl105@gmail.com"}]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false  # only for dependency management (not for packaging)