[tool.poetry]
name = "master-thesis"
version = "0.1.0"
description = ""
authors = ["mireiafrt <mireia.fortunoledesma@vito.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.1,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
numpy = ">=2.2.3,<3.0.0"
plotly = ">=6.0.0,<7.0.0"
openpyxl = ">=3.1.5,<4.0.0"
xlrd = ">=2.0.1,<3.0.0"
pyyaml = ">=6.0.2,<7.0.0"
tqdm = ">=4.67.1,<5.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
pydicom = ">=3.0.1,<4.0.0"
torch = ">=2.6.0,<3.0.0"
monai-weekly = {version = ">=1.5.dev2512,<2.0", extras = ["ignite", "nibabel", "tqdm"]}
tensorboard = ">=2.19.0,<3.0.0"
simpleitk = ">=2.4.1,<3.0.0"
kagglehub = ">=0.3.12,<0.4.0"
kaggle = ">=1.7.4.2,<2.0.0.0"
ipykernel = ">=6.29.5,<7.0.0"
optuna = ">=4.3.0,<5.0.0"
monai-generative = ">=0.2.3,<0.3.0"
lpips = ">=0.1.4,<0.2.0"
tensorboardx = "^2.6.2.2"
transformers = "^4.52.4"
gdown = "^5.2.0"
medvae = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
